Jann 30/objects/IntermediaterfaAutoAppvr__c.object
<CustomObject>
    <fields>
        <fullName>Agent1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IntermediaterfaAutoAppvrs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IntermediaterfaAutoAppvrs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IntermediaterfaAutoAppvrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalComments__c</fullName>
        <label>ApprovalComments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ApproverType__c</fullName>
        <label>ApproverType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IntermediaterfaAutoAppvrs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExistingOne__c</fullName>
        <label>ExistingOne</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFA COA Group</label>
        <referenceTo>RFA_COA_Group__c</referenceTo>
        <relationshipLabel>IntermediaterfaAutoAppvrs</relationshipLabel>
        <relationshipName>IntermediaterfaAutoAppvrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>COA Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>1. Key Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Senior Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manual_Automated__c</fullName>
        <label>Manual/Automated</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFAId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFAId</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>IntermediaterfaAutoAppvrs</relationshipLabel>
        <relationshipName>IntermediaterfaAutoAppvrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFA_ApproverId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFA Approver</label>
        <referenceTo>RFA_Approver__c</referenceTo>
        <relationshipLabel>IntermediaterfaAutoAppvrs</relationshipLabel>
        <relationshipName>IntermediaterfaAutoAppvrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RoleType__c</fullName>
        <label>RoleType</label>
        <picklist>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Creator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Copy Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Point of Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usercount__c</fullName>
        <label>Usercount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>IntermediaterfaAutoAppvr</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RFAId__c</columns>
        <columns>Agent1__c</columns>
        <columns>Agent2__c</columns>
        <columns>Agent3__c</columns>
        <columns>ApprovalComments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ExistingOne__c</columns>
        <columns>Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>intermediaterfaAutoAppvrs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IntermediaterfaAutoAppvrs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>